[gd_scene load_steps=6 format=3 uid="uid://nr3ksi6mj4h8"]

[ext_resource type="Script" uid="uid://cm2dhgcj48fob" path="res://scripts/menus_ui/comms_IU.gd" id="1_u5bv0"]
[ext_resource type="Texture2D" uid="uid://dgw0hf715lkkx" path="res://assets/textures/UI/Bottom UI Message.png" id="2_65idp"]
[ext_resource type="PackedScene" uid="uid://tnebb72tf6h1" path="res://scenes/menus_ui/text_button.tscn" id="4_hki4h"]
[ext_resource type="FontFile" uid="uid://bfelmvtojob74" path="res://assets/font/Univers UltraCondensed Regular.ttf" id="5_1daiq"]
[ext_resource type="LabelSettings" uid="uid://dryvfp2n7djov" path="res://resources/UI_popup_theme.tres" id="5_08d4c"]

[node name="Comms_UI" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -190.0
offset_right = 654.0
grow_vertical = 0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(0, 190)
mouse_filter = 1
script = ExtResource("1_u5bv0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -209.0
offset_right = 652.0
grow_vertical = 0
texture = ExtResource("2_65idp")
expand_mode = 1
stretch_mode = 5

[node name="Comms_message" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 6.24999
offset_right = 606.0
offset_bottom = 127.25
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_1daiq")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "\"Welcome to [color=#6699CC]{planet}[/color], [color=#3bdb8b]{ship_name}[/color], [color=#FFCC66]{planet}[/color] in the [color=#FFCC66]{system_name}[/color] needs a shipment of [color=#1DCC4B]{item_name}[/color]. {random_confirm_query}?\""
scroll_active = false
autowrap_mode = 2
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false

[node name="RerollButton" parent="." instance=ExtResource("4_hki4h")]
layout_mode = 0
offset_left = 413.0
offset_top = 145.0
offset_right = 484.0
offset_bottom = 175.0
text = "REROLL"
label_settings = ExtResource("5_08d4c")
horizontal_alignment = 1
vertical_alignment = 1
hover_color = Color(1, 1, 1, 1)
pressed_color = Color(0.972549, 0.776471, 0.388235, 1)

[node name="Polygon2D" parent="RerollButton/PolygonMouseDetector" index="0"]
polygon = PackedVector2Array(-1.74997, 0, 70.75, 0, 70.75, 30, -1.74997, 30)

[node name="CloseButton" parent="." instance=ExtResource("4_hki4h")]
layout_mode = 0
offset_left = 498.0
offset_top = 145.0
offset_right = 615.0
offset_bottom = 176.0
text = "close
            button"
label_settings = ExtResource("5_08d4c")
hover_color = Color(1, 1, 1, 1)
pressed_color = Color(0.4, 0.6, 0.8, 1)

[node name="Polygon2D" parent="CloseButton/PolygonMouseDetector" index="0"]
polygon = PackedVector2Array(-0.5, 0, 118.25, 0, 118.25, 30, -0.5, 30)

[connection signal="button_pressed" from="RerollButton" to="." method="_handle_reroll_pressed"]
[connection signal="button_pressed" from="CloseButton" to="." method="_handle_close_ui_pressed"]

[editable path="RerollButton"]
[editable path="RerollButton/PolygonMouseDetector"]
[editable path="CloseButton"]
[editable path="CloseButton/PolygonMouseDetector"]
